
  * Add --retry 30 to start-stop-daemon calls and a small sleep afterwards to
    try to prevent race conditions when the server takes a while to shut down.
  * Remove the code dealing with incompatible databases from 0.7.
  * Do not listen on the RESTive/XML interface by default. See:
    http://lists.schooltool.org/pipermail/schooltool/2005-April/001173.html

 -- Brian Sutherland <jinty@web.de>  Mon, 28 Mar 2005 16:28:20 +0200

schoolbell (0.9.99+1.0rc1-1) unstable; urgency=low

  * Split the schoolbell and schooltool packages. Schoolbell is now spilt into
    2 packages, a configuration package, an arch dependent library package
    containing the Zope extensions. The library package is a temporary package
    as schoolbell needs to contain its own version of Zope until Zope 3.1 is
    packaged. After that, it will become a small arch-indep Zope component.
  * Hack upstreams build process until it does everything debian/rules used to
    do, then reduce and simplify the debian rules. Also the application startup
    scripts are moved to the upstream scripts directory as they will be useful
    for the RPM packages.
  * Use the Zope 3 setup.py script to install the Zope libraries rather than
    finding and copying individual files. Unfortunately this gives no
    fine-grained control over where *.so and *.py files are put, so everything
    goes in an arch-dep package. But it's temporary and the simplification
    is worth it.
  * Remove the dependencies on twisted and pyopenssl as schoolbell 1.0 has
    been rewritten as a pure Zope 3.1 component. Also, the dependency on
    libxml2 has been removed as it is not used in SchoolBell anymore.
  * Rewrite database upgrade code to export/import upgrade databases from
    schoolbell 0.8 and 0.9. Necessary as there was a major structural change
    at schoolbell 1.0.
  * Add `mkdir -p /var/run/schoolbell` to initscript because some people like
    to mount tmpfs on /var/run.